--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <nav> 
-  <a href="index.html">link Home</a>
-  <a href="about.html">link About</a>
+  <a href="index.html">Home</a>
+  <a href="about.html">About</a>
 </nav>
