Added placeholder text and defined the typeface

--- a/index.html
+++ b/index.html
@@ -1,4 +1,11 @@
+<head>
+  <link rel="stylesheet" href="main.css">
+</head>
+<!--
 <nav> 
   <a href="index.html">Home</a>
   <a href="about.html">About</a>
 </nav>
+-->
+
+<div>This is where i'll be uploading the projects that I've worked on</div>
