Added some CSS and one line intro

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
-<head>
-  <link rel="stylesheet" href="main.css">
-</head>
-<!--
-<nav> 
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-</nav>
--->
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="main.css">
+    <meta charset="UTF-8">
+  </head>
+  <!--
+  <nav> 
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+  </nav>
+  -->
 
-<div>This is where i'll be uploading the projects that I've worked on</div>
+  <div>Hi! I'm Alen Antony Francis &#128515;, a typeface designer from Kerala, India. </div>
+  <div>Projects coming soon!!!</div>
+</html>
