--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   </nav>
   -->
 
-  <div>Hi! I'm Alen Antony Francis &#128515;, a typeface designer from Kerala, India. </div>
-  <div>Projects coming soon!!!</div>
+  <div>Hi! I'm Alen Antony Francis, a typeface designer from Kerala, India. </div>
+  <div>Projects coming soon!!! &#128515;</div>
 </html>
