--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Alen Antony Francis</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="images/wave.png">
     <meta charset="UTF-8">
@@ -12,6 +13,6 @@
   </nav>
   -->
 
-  <div>Hi! I'm Alen Antony Francis, a typeface designer from Kerala, India. </div>
-  <div>Projects coming soon!!! &#128515;</div>
+  <div>Hi! I'm Alen Antony Francis &#128515;, a typeface designer from Kerala, India. </div>
+  <div>Projects coming soon!!!</div>
 </html>
