--- a/index.html
+++ b/index.html
@@ -13,6 +13,17 @@
   </nav>
   -->
 
-  <div>Hi! I'm Alen Antony Francis &#128515;, a typeface designer from Kerala, India. </div>
-  <div>Projects coming soon!!!</div>
+  <div>Hi! &#128075; I'm Alen</div>
+  <br>
+  <!-- <div>Projects coming soon!!!</div> -->
+  
+  <div>I'm a typeface designer from Kerala, India. 
+    I specialise in designing typefaces for Latin, Arabic, and Malayalam 
+    scripts. At present, I'm pursuing my MA in Typeface Design 
+    from University of Reading. I am also an alumnus of IDC School of Design, 
+    and Albertian Institute of Science and Technology, Kalamassery.
+
+
+  
+    </div>
 </html>
