--- a/index.html
+++ b/index.html
@@ -13,17 +13,25 @@
   </nav>
   -->
 
-  <div>Hi! &#128075; I'm Alen</div>
+  <div class="hi">Hi! &#128075; I'm <span style="font-weight:600">Alen.</span></div>
   <br>
   <!-- <div>Projects coming soon!!!</div> -->
   
-  <div>I'm a typeface designer from Kerala, India. 
-    I specialise in designing typefaces for Latin, Arabic, and Malayalam 
+  <div class="intro">I'm a typeface designer from Kerala, India. 
+    I specialise in designing typefaces for Latin and Malayalam 
     scripts. At present, I'm pursuing my MA in Typeface Design 
-    from University of Reading. I am also an alumnus of IDC School of Design, 
-    and Albertian Institute of Science and Technology, Kalamassery.
+    at the University of Reading, UK.
+  </div> <br>
 
+  <!--
+  <div class="projects">
+    Projects coming soon...
+  </div>
+  -->
 
-  
-    </div>
+  <footer>
+    <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
+    <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
+    <a class="linkedin" href="https://www.linkedin.com/alensouthland/">LinkedIn</a>
+  </footer>
 </html>
