--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="images/wave.png">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <!--
   <nav> 
@@ -33,6 +34,6 @@
   <footer>
     <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
     <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
-    <a class="linkedin" href="https://www.linkedin.com/alensouthland/">LinkedIn</a>
+    <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
   </footer>
 </html>
