--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <br>
   <!-- <div>Projects coming soon!!!</div> -->
   
-  <div class="intro">I'm a typeface designer from Kerala, India. 
-    I specialise in designing typefaces for Latin and Malayalam 
-    scripts. At present, I'm pursuing my MA in Typeface Design 
+  <div class="intro">Hailing from Kerala, India. 
+    Most of my interests revolve around typeface design and lettering in Latin and Malayalam 
+    scripts. I occasionaly wet my hands with User Interface Design too, but at present, I'm pursuing my MA in Typeface Design 
     at the University of Reading, UK.
   </div> <br>
 
