--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
   <br>
   <!-- <div>Projects coming soon!!!</div> -->
   
-  <div class="intro">Hailing from Kerala, India. 
-    Most of my interests revolve around typeface design and lettering in Latin and Malayalam 
-    scripts. I occasionaly wet my hands with User Interface Design too, but at present, I'm pursuing my MA in Typeface Design 
-    at the University of Reading, UK.
+  <div class="intro">Hailing from Kerala, India, my interests and work revolve around technology, and designing typefaces in Latin and Malayalam scripts. At present, I'm pursuing my MA in Typeface Design at the University of Reading, UK. 
   </div> <br>
 
   <!--
@@ -34,6 +31,6 @@
   <footer>
     <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
     <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
-    <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
+    <a class="linkedin" href="https://www.linkedin.com/alensouthland/">LinkedIn</a>
   </footer>
 </html>
