--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <footer>
     <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
     <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
-    <a class="linkedin" href="https://www.linkedin.com/alensouthland/">LinkedIn</a>
+    <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
   </footer>
 </html>
