--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   -->
 
   <footer>
-    <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
+    <a class="instagram" href="https://www.instagram.com/zero_dimensions/">Instagram</a>
     <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
     <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
   </footer>
