--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Alen Antony Francis</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/x-icon" href="images/wave.png">
+    <link rel="icon" type="image/x-icon" href="images/male-technologist.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -22,6 +22,10 @@
   <div class="intro">Hailing from Kerala, India, my interests and work revolve around technology, and designing typefaces in Latin and Malayalam scripts. At present, I'm pursuing my MA in Typeface Design at the University of Reading, UK. 
   </div> <br>
 
+  <nav>
+
+  </nav>
+  
   <!--
   <div class="projects">
     Projects coming soon...
@@ -31,6 +35,6 @@
   <footer>
     <a class="instagram" href="https://www.instagram.com/zero_dimensions/">Instagram</a>
     <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
-    <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
+    <a class="linkedin" href="https://www.linkedin.com/alensouthland/">LinkedIn</a>
   </footer>
 </html>
