--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Alen Antony Francis</title>
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main2.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="icon" type="image/x-icon" href="images/male-technologist.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -53,7 +53,7 @@
         <div class="project"><a href="#">Illustrations for Campper.com</a></div>
     </div>
      
-  <script src="js/main2.js"></script>
+  <script src="js/main.js"></script>
   </body>
   <br><br>
   <footer>
