--- a/about.html
+++ b/about.html
@@ -1,3 +1,42 @@
-<a href="index.html">Home</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Alen Antony Francis</title>
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/main.css">
+        <link rel="icon" type="image/x-icon" href="images/male-technologist.png">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
+  
+    <body>
+        <a href="index.html" class="hi">Hi! &#128075; I'm 
+            <span style="font-weight:600">Alen.</span>
+        </a>
+        <div><a href="index.html" class="rightlink">↵ home</a>
+        </div>
 
-About me Here.
+
+        <div class="profile_img">
+            <img src="images/me_eating_noodles.jpg" alt="Me Enjoying Noodles">
+        </div>
+        
+        <div class="timeline">
+            <h4>Work Experience</h4>
+            <p>UX Designer, Yuj Designs <span style="opacity: 0.4;">(2021 Aug-2022 Aug)</span></p>
+            <p>UX Design Intern, Cognicor Technologies <span style="opacity: 0.4;">(2018 Oct-2019 May)</span></p>
+            <p>Graphic Design Intern, Campper.com <span style="opacity: 0.4;">(2018 May-2018 Sept)</span></p>
+            <br>
+            <h4>Education</h4>
+            <p>MA Typeface Design, University of Reading <span style="opacity: 0.4;">(2022 Sep-Present)</span></p>
+            <p>M.Des Communication Design, IDC IIT Bombay <span style="opacity: 0.4;">(2019 Jul-2021 Jun)</span></p>
+            <p>B.Tech Computer Science, AISAT Kalamassery <span style="opacity: 0.4;">(2013 Jun-2017 May)</span></p>
+        </div>
+    </body>
+
+    <footer>
+        <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
+        <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
+        <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
+    </footer>    
+</html>
