--- a/about.html
+++ b/about.html
@@ -38,5 +38,5 @@
         <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
         <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
         <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
-    </footer>    
+    </footer><br>
 </html>
