--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="index.html" class="hi">Hi! 👋 I'm 
       <span style="font-weight:600">Alen.</span>
     </a>
-    <a href="about.html" class="rightlink">↳ about me</a>
+    <a href="about.html" class="rightlink">↳ profile</a>
     
     <div class="intro">
       Hailing from Kerala (India), my interests and work revolve around technology and designing typefaces in Latin & Malayalam scripts. At present, I'm pursuing my MA in Typeface Design at the University of Reading, UK.
@@ -57,7 +57,8 @@
       <div><a href="projects/1_ner.html" class="proj">Illustrations for Campper.com</a></div>
     </div>
      
-  <script src="js/main.js"></script>
+    <script src="js/main.js">
+    </script>
   </body>
   
   <footer>
