--- a/about.html
+++ b/about.html
@@ -13,7 +13,8 @@
         <a href="index.html" class="hi">Hi! &#128075; I'm 
             <span style="font-weight:600">Alen.</span>
         </a>
-        <div><a href="index.html" class="rightlink">↵ home</a>
+        <div>
+            <a href="index.html" class="rightlink">↵ home</a>
         </div>
 
 
@@ -21,6 +22,7 @@
             <img src="images/me_eating_noodles.jpg" alt="Me Enjoying Noodles">
         </div>
         
+
         <div class="timeline">
             <h4>Work Experience</h4>
             <p>UX Designer, Yuj Designs <span style="opacity: 0.4;">(2021 Aug-2022 Aug)</span></p>
@@ -38,5 +40,5 @@
         <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
         <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
         <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
-    </footer><br>
+    </footer>
 </html>
