--- a/index.html
+++ b/index.html
@@ -11,13 +11,17 @@
   
   
   <body>
-    <a href="index.html" class="hi">Hi! 👋 I'm 
-      <span style="font-weight:600">Alen.</span>
-    </a>
-    <a href="about.html" class="rightlink">↳ profile</a>
+    <div class="wrapper">
+      <a href="index.html" class="hi">Hi! 👋 I'm 
+        <span style="font-weight:600">Alen.</span>
+      </a>
+      <a href="about.html" class="rightlink">↳ profile</a>
+    </div>
     
+    <div class="wrapper">
     <div class="intro">
       Hailing from Kerala (India), my interests and work revolve around technology and designing typefaces in Latin & Malayalam scripts. At present, I'm pursuing my MA in Typeface Design at the University of Reading, UK.
+    </div>
     </div>
     
   
@@ -32,7 +36,7 @@
       <a href="projects/1_ner.html" class="proj">
         <div>NER - Multiscript Typeface for Signages</div>
       </a>
-      <a href="projects/1_ner.html" class="proj">
+      <a href="projects/pixel/2_pixel.html" class="proj">
         <div>ARCADE - A Pixel Font in Malayalam</div>
       </a>
       <a href="projects/1_ner.html" class="proj">
