--- a/projects/pixel/2_pixel.html
+++ b/projects/pixel/2_pixel.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Alen Antony Francis</title>
+        <title>ARCADE - A Pixel font in Malayalam</title>
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../projects.css">
-        <link rel="icon" type="image/x-icon" href="../images/male-technologist.png">
+        <link rel="icon" type="image/x-icon" href="../../images/male-technologist.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
