--- a/projects/pixel/2_pixel.html
+++ b/projects/pixel/2_pixel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ARCADE - A Pixel font in Malayalam</title>
+        <title>Alen Antony Francis</title>
         <link rel="stylesheet" href="../css/normalize.css">
         <link rel="stylesheet" href="../projects.css">
         <link rel="icon" type="image/x-icon" href="../../images/male-technologist.png">
@@ -10,14 +10,22 @@
     </head>
   
     <body>
-        <div class="wrapper">
-        <div href="#" class="hi" style="font-weight: 600;"> ARCADE - A Pixel font in Malayalam
+        <div href="#" class="hi" style="font-weight: 600;"> 
+            ARCADE - A Pixel font in Malayalam
         </div>
         
         <div>
             <a href="../../index.html" class="rightlink">↵ home</a>
         </div>
-        </div>
+        
+        <p style="float: left;">
+            This project was done as part of my academic curriculum in IDC, IIT Bombay. As lockdowns begain, our internships were converted into small self-initiated projects. After gathering a bunch of potential type design ideas, I eventually settled upon Arcade game fonts.
+        </p>
+
+        <p style="float: left;">
+            The topic of pixel typefaces from arcade games really intruiged me. Inspired from whatever images I could get from the book 'Arcade Game Typography' by Toshi Omagari, I wanted to see how a Malayalam version might look like. Furthermore, I wanted to see how low of a resolution can Malayalam letters acheive.
+        </p>
+
         <div class="project_img">
             <img src="../pixel/2_proj_images/banner-2-ka_ka1.gif" alt="Ka Pixel">
             <img src="../pixel/2_proj_images/banner-2-ja_ja1.gif" alt="Ja Pixel">
