--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <button class="tablinks" onclick="openCity(event, 'UX')">ux.ui</button>
         <button class="tablinks" onclick="openCity(event, 'Other')">other</button>
     </div>
+
+    <div class="tab2">projects</div>
     
     <div id="All" class="tabcontent">
       <a href="projects/1_ner.html" class="proj">
