--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <a href="index.html" class="hi">Hi! 👋 I'm 
         <span style="font-weight:600">Alen.</span>
       </a>
-      <a href="about.html" class="rightlink">↳ profile</a>
+      <a href="about.html" class="rightlink">— profile</a>
     </div>
     
     <div class="wrapper">
