--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             <span style="font-weight:600">Alen.</span>
         </a>
         <div>
-            <a href="index.html" class="rightlink">↵ home</a>
+            <a href="index.html" class="rightlink">— home</a>
         </div>
 
 
