--- a/projects/pixel/2_pixel.html
+++ b/projects/pixel/2_pixel.html
@@ -15,7 +15,7 @@
         </div>
         
         <div>
-            <a href="../../index.html" class="rightlink">— home</a>
+            <a href="https://alensouthland.github.io/" class="rightlink">— home</a>
         </div>
         
         <p style="float: left;">
