--- a/about.html
+++ b/about.html
@@ -19,11 +19,14 @@
 
 
         <div class="profile_img">
-            <img src="images/me_eating_noodles.jpg" alt="Me Enjoying Noodles">
+            <div class="polaroid">
+                <img src="images/me_eating_noodles.jpg" alt="Me Enjoying Noodles">
+            </div>
         </div>
         
 
         <div class="timeline">
+
             <h4>Work Experience</h4>
             <p>UX Designer, Yuj Designs <span style="opacity: 0.4;">(2021 Aug-2022 Aug)</span></p>
             <p>UX Design Intern, Cognicor Technologies <span style="opacity: 0.4;">(2018 Oct-2019 May)</span></p>
@@ -33,7 +36,9 @@
             <p>MA Typeface Design, University of Reading <span style="opacity: 0.4;">(2022 Sep-Present)</span></p>
             <p>M.Des Communication Design, IDC IIT Bombay <span style="opacity: 0.4;">(2019 Jul-2021 Jun)</span></p>
             <p>B.Tech Computer Science, AISAT Kalamassery <span style="opacity: 0.4;">(2013 Jun-2017 May)</span></p>
+
         </div>
+
     </body>
 
     <footer>
