--- a/projects/1_ner.html
+++ b/projects/1_ner.html
@@ -13,7 +13,7 @@
         <div href="#" class="hi" style="font-weight: 600;"> Site Under Construction 🚧
         </div>
         <div>
-            <a href="../index.html" class="rightlink">— home</a>
+            <a href="../index.html" class="rightlink">↵ home</a>
         </div>
 
         
