--- a/projects/pixel/2_pixel.html
+++ b/projects/pixel/2_pixel.html
@@ -3,33 +3,30 @@
     <head>
         <title>Alen Antony Francis</title>
         <link rel="stylesheet" href="../css/normalize.css">
-        <link rel="stylesheet" href="../projects.css">
+        <link rel="stylesheet" href="../../css/projects.css">
         <link rel="icon" type="image/x-icon" href="../../images/male-technologist.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
   
     <body>
-        <div href="#" class="hi" style="font-weight: 600;"> 
+        <div class="hi" style="font-weight: 600;"> 
             ARCADE - A Pixel font in Malayalam
         </div>
+        <a href="../../index.html" class="rightlink">— home</a>
         
-        <div>
-            <a href="https://alensouthland.github.io/" class="rightlink">— home</a>
-        </div>
-        
-        <p style="float: left;">
+        <p style="width: 800px; float: left;">
             This project was done as part of my academic curriculum in IDC, IIT Bombay. As lockdowns begain, our internships were converted into small self-initiated projects. After gathering a bunch of potential type design ideas, I eventually settled upon Arcade game fonts.
         </p>
 
-        <p style="float: left;">
+        <p style="width: 800px;">
             The topic of pixel typefaces from arcade games really intruiged me. Inspired from whatever images I could get from the book 'Arcade Game Typography' by Toshi Omagari, I wanted to see how a Malayalam version might look like. Furthermore, I wanted to see how low of a resolution can Malayalam letters acheive.
         </p>
 
         <div class="project_img">
-            <img src="../pixel/2_proj_images/banner-2-ka_ka1.gif" alt="Ka Pixel">
-            <img src="../pixel/2_proj_images/banner-2-ja_ja1.gif" alt="Ja Pixel">
-            <img src="../pixel/2_proj_images/4-fams.gif" alt="4fams Pixel">
+            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/banner-2-ka_ka1.gif" alt="Ka Pixel"></div><br>
+            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/banner-2-ja_ja1.gif" alt="Ja Pixel"></div><br>
+            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/4-fams.gif" alt="4fams Pixel"></div>
             <img src="../pixel/2_proj_images/a aa e e 2.png" alt="a aa 1">
             <img src="../pixel/2_proj_images/a aa e ee_3.png" alt="a aa 2">
             <img src="../pixel/2_proj_images/made-with-love-from-Kochi_corrected.gif" alt="Kochi love Pixel">
