--- a/projects/pixel/2_pixel.html
+++ b/projects/pixel/2_pixel.html
@@ -26,10 +26,17 @@
         <div class="project_img">
             <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/banner-2-ka_ka1.gif" alt="Ka Pixel"></div><br>
             <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/banner-2-ja_ja1.gif" alt="Ja Pixel"></div><br>
-            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/4-fams.gif" alt="4fams Pixel"></div>
-            <img src="../pixel/2_proj_images/a aa e e 2.png" alt="a aa 1">
-            <img src="../pixel/2_proj_images/a aa e ee_3.png" alt="a aa 2">
-            <img src="../pixel/2_proj_images/made-with-love-from-Kochi_corrected.gif" alt="Kochi love Pixel">
+            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/4-fams.gif" alt="4fams Pixel"></div><br>
+            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/a aa e e 2.png" alt="a aa 1"></div><br>
+            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/a aa e ee_3.png" alt="a aa 2"></div><br>
+            <div style="background-color: black; border-radius: 12px;"><img src="../pixel/2_proj_images/made-with-love-from-Kochi_corrected.gif" alt="Kochi love Pixel"></div><br>
+            
+            <p style="width: 800px;">
+                <span style="font-weight: 600;">Update:–</span> A display variant of this typeface is a WIP. Here's a sneak peak 👇.
+                <img style=" background-color: white; border-radius: 12px;" src="../pixel/2_proj_images/display_variant_sneak.jpg" alt="Kochi love Pixel">
+            </p>
+            
+
         </div>
     </body>
     <footer>
