--- a/about.html
+++ b/about.html
@@ -10,10 +10,10 @@
     </head>
   
     <body>
-        <a href="index.html" class="hi">Hi! &#128075; I'm 
-            <span style="font-weight:600">Alen.</span>
-        </a>
-        <div>
+        <div class="header">
+            <a href="index.html" class="hi">Hi! 👋 I'm 
+              <span style="font-weight:600">Alen.</span>
+            </a>
             <a href="index.html" class="rightlink">— home</a>
         </div>
 
@@ -26,7 +26,6 @@
         
 
         <div class="timeline">
-
             <h4>Work Experience</h4>
             <p>UX Designer, Yuj Designs <span style="opacity: 0.4;">(2021 Aug-2022 Aug)</span></p>
             <p>UX Design Intern, Cognicor Technologies <span style="opacity: 0.4;">(2018 Oct-2019 May)</span></p>
@@ -36,7 +35,6 @@
             <p>MA Typeface Design, University of Reading <span style="opacity: 0.4;">(2022 Sep-Present)</span></p>
             <p>M.Des Communication Design, IDC IIT Bombay <span style="opacity: 0.4;">(2019 Jul-2021 Jun)</span></p>
             <p>B.Tech Computer Science, AISAT Kalamassery <span style="opacity: 0.4;">(2013 Jun-2017 May)</span></p>
-
         </div>
 
     </body>
