--- a/projects/Ner/1_ner.html
+++ b/projects/Ner/1_ner.html
@@ -10,10 +10,12 @@
     </head>
   
     <body>
-        <div class="hi" style="font-weight: 600;"> 
-            NER - Multiscript Typeface for Signages
+        <div class="header" name="top">
+            <div class="hi" style="font-weight: 600;"> 
+                NER - Multiscript Typeface for Signages
+            </div>
+            <a href="../../index.html" class="rightlink">— home</a>
         </div>
-        <a href="../../index.html" class="rightlink">— home</a>
         
         <p style="width: 800px; float: left;">
             Graduation Project at IDC School of Design, IIT Bombay. I have always been more interested in the functional aspects of a typeface and I found signages to be an interesting topic to work on. Especially the challenges when displaying multiple scripts on a single signage board as that is a common scenario everywhere in India.
@@ -25,7 +27,7 @@
 
         <div class="ner_squish_stretch">
             <p class="ner_latn">Ner Variable</p>
-            <span><p class="ner_mal">നേർ വേരിയബിൾ</p></span>
+            <p class="ner_mal">നേർ വേരിയബിൾ</p>
             <link rel="stylesheet" href="squish_stretch.css">
         </div>
 
@@ -39,6 +41,11 @@
         <p style="width: 800px; font-style: italic; opacity: 0.4;">
             <span style="font-weight: 600;">Please Note:–</span> There are some things that I would've done differently now, and things that I failed to take into consideration while doing this project, like the legibility of the condensed versions, inclusion of old orthography, additional script support, more refinement in spacing etc.
         </p>
-
     </body>
+    <footer>
+        <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
+        <a class="behance" href="https://www.behance.net/alensouthland/">Behance</a>
+        <a class="linkedin" href="https://www.linkedin.com/in/alensouthland/">LinkedIn</a>
+        <a href="#top" class="rightlink">↑ scroll to top</a>
+    </footer>
 </html>
