--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img class="home_thumb" src="./projects/Ner/1_proj_images/1_thumb.jpeg" alt="ner_thumb">
           <div class="proj">
             <p>NER - Multiscript Typeface for Signages</p>
-            <p style="opacity: 0.5;">2021</p>
+            <div style="opacity: 0.5;">2021</div>
           </div>
         </a>
       </div>
@@ -46,8 +46,8 @@
         <a href="projects/Pixel/2_pixel.html">
           <img class="home_thumb" src="./projects/Pixel/2_proj_images/2_thumb.jpeg" alt="arcade_thumb">
           <div class="proj">
-            <p>ARCADE - A Pixel Font in Malayalam</p>
-            <p style="opacity: 0.5;">2020</p>
+            <p class="proj_name">ARCADE - A Pixel Font in Malayalam</p>
+            <div style="opacity: 0.5;">2020</div>
           </div>
         </a>
       </div>
@@ -55,8 +55,8 @@
         <a href="404.html">
           <img class="home_thumb" src="./projects/Dule/3_proj_images/dule_thumb.png" alt="dule_thumb">
           <div class="proj">
-            <p>DULE App - Meeting Scheduler ⚠️</p>
-            <p style="opacity: 0.5;">2021</p>
+            <p class="proj_name">DULE App - Meeting Scheduler ⚠️</p>
+            <div style="opacity: 0.5;">2021</div>
           </div>
         </a>
       </div>
@@ -64,8 +64,8 @@
         <a href="404.html">
           <img class="home_thumb" src="./projects/Campper/3_proj_images/camper sitting.jpeg" alt="campper_thumb">
           <div class="proj">
-            <p>Illustrations for Campper.com ⚠️</p>
-            <p style="opacity: 0.5;">2018</p>
+            <p class="proj_name">Illustrations for Campper.com ⚠️</p>
+            <div style="opacity: 0.5;">2018</div>
           </div>
         </a>
       </div>
