--- a/projects/Ner/1_ner.html
+++ b/projects/Ner/1_ner.html
@@ -17,14 +17,14 @@
             <a href="../../index.html" class="rightlink">— home</a>
         </div>
         
-        <p style="width: 800px; float: left;">
-            Graduation Project at IDC School of Design, IIT Bombay. I have always been more interested in the functional aspects of a typeface and I found signages to be an interesting topic to work on. Especially the challenges when displaying multiple scripts on a single signage board as that is a common scenario everywhere in India.
+        <p class="proj_description">
+            <p style="float: left;">
+                Graduation Project at IDC School of Design, IIT Bombay. I have always been more interested in the functional aspects of a typeface and I found signages to be an interesting topic to work on. Especially the challenges when displaying multiple scripts on a single signage board as that is a common scenario everywhere in India. 
+            </p>   
+            <p>
+                The typeface is variable in the width axis which allows them to be used without squishing the font when the space is limited. The supported scripts are Latin and Malayalam along with some arrow symbols and a few contexual and stylistic alternates.
+            </p>
         </p>
-
-        <p style="width: 800px;">
-            The typeface is variable in the width axis which allows them to be used without squishing the font when the space is limited. The supported scripts are Latin and Malayalam along with some arrow symbols and a few contexual and stylistic alternates.
-        </p>
-
         <div class="ner_squish_stretch">
             <p class="ner_latn">Ner Variable</p>
             <p class="ner_mal">നേർ വേരിയബിൾ</p>
@@ -38,7 +38,7 @@
                 <img src="../Ner/1_proj_images/signage redesigned in ner_2-8.png" alt="Ka Pixel"></div>
         </div>
 
-        <p style="width: 800px; font-style: italic; opacity: 0.4;">
+        <p style="width: 100%; font-style: italic; opacity: 0.4;">
             <span style="font-weight: 600;">Please Note:–</span> There are some things that I would've done differently now, and things that I failed to take into consideration while doing this project, like the legibility of the condensed versions, inclusion of old orthography, additional script support, more refinement in spacing etc.
         </p>
     </body>
