--- a/projects/Pixel/2_pixel.html
+++ b/projects/Pixel/2_pixel.html
@@ -17,12 +17,14 @@
             <a href="../../index.html" class="rightlink">— home</a>
         </div>
         
-        <p class="intro">
-            This project was done as part of my academic curriculum in IDC, IIT Bombay. As lockdowns begain, our internships were converted into small self-initiated projects. After gathering a bunch of potential type design ideas, I eventually settled upon Arcade game fonts.
-        </p>
+        <p class="proj_desciption">
+            <p style="float: left;">
+                This project was done as part of my academic curriculum in IDC, IIT Bombay. As lockdowns begain, our internships were converted into small self-initiated projects. After gathering a bunch of potential type design ideas, I eventually settled upon Arcade game fonts.
+            </p>
 
-        <p class="intro">
-            The topic of pixel typefaces from arcade games really intruiged me. Inspired from whatever images I could get from the book 'Arcade Game Typography' by Toshi Omagari, I wanted to see how a Malayalam version might look like. Furthermore, I wanted to see how low of a resolution can Malayalam letters acheive.
+            <p>
+                The topic of pixel typefaces from arcade games really intruiged me. Inspired from whatever images I could get from the book 'Arcade Game Typography' by Toshi Omagari, I wanted to see how a Malayalam version might look like. Furthermore, I wanted to see how low of a resolution can Malayalam letters acheive.
+            </p>
         </p>
 
         <div class="project_img">
