--- a/projects/Pixel/2_pixel.html
+++ b/projects/Pixel/2_pixel.html
@@ -33,6 +33,7 @@
             <div style="background-color: black; border-radius: 12px;"><img src="../Pixel/2_proj_images/4-fams.gif" alt="4fams Pixel"></div><br>
             <div style="background-color: black; border-radius: 12px;"><img src="../Pixel/2_proj_images/a aa e e 2.png" alt="a aa 1"></div><br>
             <div style="background-color: black; border-radius: 12px;"><img src="../Pixel/2_proj_images/a aa e ee_3.png" alt="a aa 2"></div><br>
+            <div style="background-color: black; border-radius: 12px;"><img src="../Pixel/2_proj_images/landcsapepixel.png" alt="kali kazhinju"></div><br>
             <div style="background-color: black; border-radius: 12px;"><img src="../Pixel/2_proj_images/made-with-love-from-Kochi_corrected.gif" alt="Kochi love Pixel"></div><br>
             
             <p>
