--- a/projects/Ner/1_ner.html
+++ b/projects/Ner/1_ner.html
@@ -27,7 +27,7 @@
         </p>
         <div class="ner_squish_stretch">
             <p class="ner_latn">Ner Variable</p>
-            <p class="ner_mal">നേർ വേര്യബിൾ</p>
+            <p class="ner_mal">നേർ വേരിയബിൾ</p>
             <link rel="stylesheet" href="squish_stretch.css">
         </div>
 
