--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Alen Antony Francis</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="icon" type="image/x-icon" href="images/male-technologist.png">
+    <link rel="icon" type="image/x-icon" href="images/slightly_smiling_face.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
@@ -13,15 +13,29 @@
   <body>
     <div class="header">
       <a href="index.html" class="hi">Hi! 👋 I'm 
-        <span style="font-weight:600">Alen.</span>
+        <span class="alen">Alen.</span>
       </a>
       <a href="about.html" class="rightlink">— profile</a>
     </div>
-
+    <br>
+    <div class="test_notice">
+      <h1>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      Thanks.</h1>
+      <h2>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      Thanks.</h2>
+      <h3>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      Thanks.</h3>
+      <h4>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      Thanks.</h4>
+      <p>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      Thanks.</p>
+      
+    </div>
+    <br>
     <div class="intro">
       Hailing from Kerala (India), my interests and work revolve around technology and designing typefaces in Latin & Malayalam scripts. At present, I'm pursuing my MA in Typeface Design at the University of Reading, UK.
     </div>
-
+    
 
     <div id="myBtnContainer" class="tab1">
       <button class="btn active" onclick="filterSelection('all')"> all projects</button>
@@ -61,7 +75,7 @@
         </a>
       </div>
       <div class="filterDiv ot">
-        <a href="404.html">
+        <a href="./projects/Campper/4_campper.html">
           <img class="home_thumb" src="./projects/Campper/3_proj_images/camper sitting.jpeg" alt="campper_thumb">
           <div class="proj">
             <p class="proj_name">Illustrations for Campper.com ⚠️</p>
