--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     </div>
     <br>
     <div class="test_notice">
-      <h1>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      <h1>Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
       Thanks.</h1>
-      <h2>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      <h2>Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
       Thanks.</h2>
-      <h3>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      <h3>Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
       Thanks.</h3>
-      <h4>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      <h4>Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
       Thanks.</h4>
-      <p>Please note: The fonts on this site may look demon possessed as I'm using this site for testing the typeface I'm working on.
+      <p>Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
       Thanks.</p>
       
     </div>
