--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       Thanks.</h3>
       <h4>Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
       Thanks.</h4>
-      <p>Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
+      <p style="font-size: 0.7em;">Please note: The fonts on this site may look demon possessed, as I'm using this site for testing the typeface I'm working on.
       Thanks.</p>
       
     </div>
