--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <body>
         <div class="header">
             <a href="index.html" class="hi">Hi! 👋 I'm 
-              <span style="font-weight:600">Alen.</span>
+              <span class="alen">Alen.</span>
             </a>
             <a href="index.html" class="rightlink">— home</a>
         </div>
