--- a/index_fonttest.html
+++ b/index_fonttest.html
@@ -18,7 +18,7 @@
     </div>
     <br>
     <div class="fontbox">
-      Thiruvananthapuram • Finance department sources responded that most of the tax arrears pointed out by the CAG കാരണം കേസുകളും സർക്കാർ സ്ഥാപനങ്ങളുടെ വീഴ്ചയുമാണെന്നു ധനവകുപ്പ് വൃത്തങ്ങൾ പ്രതികരിച്ചു.
+    Finance • dept. sources responded that most of the tax arrears pointed out by the CAG സിഎജി കാരണം കേസുകളും സർക്കാർ സ്ഥാപനങ്ങളുടെ വീഴ്ചയുമാണെന്നു ധനവകുപ്പ് വൃത്തങ്ങൾ പ്രതികരിച്ചു.
     </div> &nbsp;
     <div class="fontbox" style="font-size: 2rem;">
       Thiruvananthapuram • Finance department sources responded that most of the tax arrears pointed out by the CAG were due to cases and failure of government institutions. <br>
