--- a/index_fonttest.html
+++ b/index_fonttest.html
@@ -18,10 +18,10 @@
     </div>
     <br>
     <div class="fontbox">
-    Finance • dept. sources responded that most of the tax arrears pointed out by the CAG സിഎജി കാരണം കേസുകളും സർക്കാർ സ്ഥാപനങ്ങളുടെ വീഴ്ചയുമാണെന്നു ധനവകുപ്പ് വൃത്തങ്ങൾ പ്രതികരിച്ചു.
+    Finance • dept. sources responded that most of the tax arrears pointed out by the CAG സിഎജി കാരണം കേസുകളും സർക്കാർ സ്ഥാപന വീഴ്ച ധനവകുപ്പ് വൃത്തങ്ങൾ പ്രതികരിച്ചു.
     </div> &nbsp;
     <div class="fontbox" style="font-size: 2rem;">
-      Thiruvananthapuram • Finance department sources responded that most of the tax arrears pointed out by the CAG were due to cases and failure of government institutions. <br>
+      Trivandrum • Finance department sources responded that most of the tax arrears pointed out by the CAG were due to cases and failure of government institutions. <br>
       തിരുവനന്തപുരം • സിഎജി ചൂണ്ടിക്കാട്ടിയ മിക്ക നികുതി കുടിശികകൾക്കും കാരണം കേസുകളും സർക്കാർ സ്ഥാപനങ്ങളുടെ വീഴ്ചയുമാണെന്നു ധനവകുപ്പ് വൃത്തങ്ങൾ പ്രതികരിച്ചു.
     </div> &nbsp;
     <div class="fontbox" style="font-size: 1.2rem;">Cases due to arrears: Government <br>
