--- a/index_fonttest.html
+++ b/index_fonttest.html
@@ -28,8 +28,11 @@
       Thiruvananthapuram • Finance department sources responded that most of the tax arrears pointed out by the CAG were due to cases and failure of government institutions. It is a situation where companies like KSRTC which are facing loss need to be helped. The GST department explained to the CAG that there was a huge drop in revenue due to the implementation of the amnesty scheme and covid. Meanwhile, the CAG appreciated the local department for settling 93% cases related to building tax. <br> <br>
       കുടിശികയ്ക്കു കാരണം കേസുകൾ: സർക്കാർ <br>
       തിരുവനന്തപുരം • സിഎജി ചൂണ്ടിക്കാട്ടിയ മിക്ക നികുതി കുടിശികകൾക്കും കാരണം കേസുകളും സർക്കാർ സ്ഥാപനങ്ങളുടെ വീഴ്ചയുമാണെന്നു ധനവകുപ്പ് വൃത്തങ്ങൾ പ്രതികരിച്ചു. നഷ്ടത്തിലോടുന്ന കെഎസ്ആർടിസി പോലുള്ള സ്ഥാപനങ്ങളെ അങ്ങോട്ടു സഹായിക്കേണ്ട അവസ്ഥയാണ്. പൊതുമാപ്പ് പദ്ധതി നടപ്പാക്കിയതും കോവിഡും കാരണം വരുമാനത്തിൽ വലിയ ഇടിവുണ്ടായെന്നാണ് ജിഎസ്ടി വകുപ്പ് സിഎജിക്കു നൽകിയ വിശദീകരണം. അതേസമയം, കെട്ടിട നികുതി സംബന്ധിച്ച 93% കേസുകളും തീർപ്പായതിന് തദ്ദേശ വകുപ്പിനെ സിഎജി അഭിനന്ദിച്ചു.
+    </div> &nbsp;
+    <div class="fontbox" style="font-size: 1rem;">
+      Astonished by his eloquence any unsuspecting member of the crowd who had joined with eagerness, Sitomaru looked at the watch and knew that the time had come for him to leave for the monastery in the evening. He was standing in the palace looking at the horizon and thinking about something, when from the north came a warrior with a red umbrella and a golden-stamped flag, accompanied by the chief minister and the chief minister and twenty vigorous warriors as bodyguards. <br>
+      ഔത്സുക്യത്തോടെ വന്നു ചേർന്ന ജഩസഞ്ചയത്തിൽ ൠഭോഷത്വമില്ലാത്ത ഏതൊരാളെയും തന്റെ വാൿപടുത്വത്താൽ ആശ്ചര്യപ്പെടുത്തിക്കൊണ്ടു് ഢമരുമേളത്തിന്റെയും മണിഝംകാരങ്ങളുടെയും അകമ്പടിയോടെ ഌപ്തപ്രചാരങ്ങളായ ഒട്ടേറെ പുരാണകഥകൾ അവരെ പറഞ്ഞു കേൾപ്പിച്ച ആ ദീക്ഷാധാരിയായ ഭക്തസംഩ്യാസിക്കു് സന്ധ്യാവന്ദഩത്തിഩായി മഠത്തിലേക്കു പുറപ്പെടേണ്ട സമയം എത്തിയോ എന്നു് ഘടികാരത്തിൽ നോക്കി അറിഞ്ഞുകൊണ്ടു വരുവാൻ തോഴിയെ ഏല്പിച്ചിട്ടു് രാജകുമാരി സിന്ദൂരഛവിയാർന്ന ചക്രവാളത്തിലേക്കു് നോക്കി എന്തോ ഓർത്തുകൊണ്ടു് ഈറൻമിഴികളോടെ അന്തപുരത്തിൽ നിൽക്കുന്ന വേളയിലായിരുന്നു വെൺകൊഺക്കുടയും ൡതമുദ്രാങ്കിതമായ പതാകയും ഉള്ള തേരിലേറി ഉത്തരദിക്കിൽ നിന്നും സൈഩ്യാധിപഩോടും മന്ത്രിമുഖ്യഩോടും പിഩ്ഩെ അംഗരക്ഷകരായി ഇരുപതു് ഊർജസ്വലരായ യോദ്ധാക്കളോടും ഒപ്പം ഋഷിവര്യൻ ഒരു കൈയിൽ യോഗദണ്ഡവും മഺേതിൽ ഐശ്വര്യനിദായകമായ വലംപിരിശംഖും ഏന്തിക്കൊണ്ടു് വന്നു ചേർന്നതു്.
     </div>
-    <div>
   
   <footer>
     <a class="instagram" href="https://www.instagram.com/alensouthland/">Instagram</a>
